crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__it_works.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: parse(src)
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 15..36,
                pattern: Ident(
                    BindingIdent {
                        span: 15..18,
                        id: Ident {
                            span: 15..18,
                            name: "add",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Lambda(
                        Lambda {
                            span: 21..36,
                            params: [
                                EFnParam {
                                    pat: Ident(
                                        EFnParamBindingIdent {
                                            span: 22..23,
                                            id: Ident {
                                                span: 22..23,
                                                name: "a",
                                            },
                                        },
                                    ),
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                                EFnParam {
                                    pat: Ident(
                                        EFnParamBindingIdent {
                                            span: 25..26,
                                            id: Ident {
                                                span: 25..26,
                                                name: "b",
                                            },
                                        },
                                    ),
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                            ],
                            body: Op(
                                Op {
                                    span: 31..36,
                                    op: Add,
                                    left: Ident(
                                        Ident {
                                            span: 31..32,
                                            name: "a",
                                        },
                                    ),
                                    right: Ident(
                                        Ident {
                                            span: 35..36,
                                            name: "b",
                                        },
                                    ),
                                },
                            ),
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                ),
                declare: false,
            },
            VarDecl {
                span: 38..59,
                pattern: Ident(
                    BindingIdent {
                        span: 38..41,
                        id: Ident {
                            span: 38..41,
                            name: "sub",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Lambda(
                        Lambda {
                            span: 44..59,
                            params: [
                                EFnParam {
                                    pat: Ident(
                                        EFnParamBindingIdent {
                                            span: 45..46,
                                            id: Ident {
                                                span: 45..46,
                                                name: "a",
                                            },
                                        },
                                    ),
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                                EFnParam {
                                    pat: Ident(
                                        EFnParamBindingIdent {
                                            span: 48..49,
                                            id: Ident {
                                                span: 48..49,
                                                name: "b",
                                            },
                                        },
                                    ),
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                            ],
                            body: Op(
                                Op {
                                    span: 54..59,
                                    op: Sub,
                                    left: Ident(
                                        Ident {
                                            span: 54..55,
                                            name: "a",
                                        },
                                    ),
                                    right: Ident(
                                        Ident {
                                            span: 58..59,
                                            name: "b",
                                        },
                                    ),
                                },
                            ),
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                ),
                declare: false,
            },
            VarDecl {
                span: 75..91,
                pattern: Ident(
                    BindingIdent {
                        span: 75..78,
                        id: Ident {
                            span: 75..78,
                            name: "sum",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    App(
                        App {
                            span: 81..91,
                            lam: Ident(
                                Ident {
                                    span: 81..84,
                                    name: "add",
                                },
                            ),
                            args: [
                                ExprOrSpread {
                                    spread: None,
                                    expr: Lit(
                                        Num(
                                            Num {
                                                span: 85..86,
                                                value: "5",
                                            },
                                        ),
                                    ),
                                },
                                ExprOrSpread {
                                    spread: None,
                                    expr: Lit(
                                        Num(
                                            Num {
                                                span: 88..90,
                                                value: "10",
                                            },
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
