crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__jsx-10.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let elem = <div point={point} id=\\\"point\\\">Hello, {msg}</div>\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 4..59,
                pattern: Ident(
                    BindingIdent {
                        span: 4..8,
                        id: Ident {
                            span: 4..8,
                            name: "elem",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    JSXElement(
                        JSXElement {
                            span: 11..59,
                            name: "div",
                            attrs: [
                                JSXAttr {
                                    span: 16..29,
                                    ident: Ident {
                                        span: 16..21,
                                        name: "point",
                                    },
                                    value: JSXExprContainer(
                                        JSXExprContainer {
                                            span: 22..29,
                                            expr: Ident(
                                                Ident {
                                                    span: 23..28,
                                                    name: "point",
                                                },
                                            ),
                                        },
                                    ),
                                },
                                JSXAttr {
                                    span: 30..40,
                                    ident: Ident {
                                        span: 30..32,
                                        name: "id",
                                    },
                                    value: Lit(
                                        Str(
                                            Str {
                                                span: 33..40,
                                                value: "point",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            children: [
                                JSXText(
                                    JSXText {
                                        span: 41..48,
                                        value: "Hello, ",
                                    },
                                ),
                                JSXExprContainer(
                                    JSXExprContainer {
                                        span: 48..53,
                                        expr: Ident(
                                            Ident {
                                                span: 49..52,
                                                name: "msg",
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
