crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__jsx-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"<Foo>{bar}</Foo>\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..16,
                expr: JSXElement(
                    JSXElement {
                        span: 0..16,
                        name: "Foo",
                        attrs: [],
                        children: [
                            JSXExprContainer(
                                JSXExprContainer {
                                    span: 5..10,
                                    expr: Ident(
                                        Ident {
                                            span: 6..9,
                                            name: "bar",
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                ),
            },
        ],
    },
)
