crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__jsx-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"<Foo>{<Bar>{baz}</Bar>}</Foo>\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..29,
                expr: JSXElement(
                    JSXElement {
                        span: 0..29,
                        name: "Foo",
                        attrs: [],
                        children: [
                            JSXExprContainer(
                                JSXExprContainer {
                                    span: 5..23,
                                    expr: JSXElement(
                                        JSXElement {
                                            span: 6..22,
                                            name: "Bar",
                                            attrs: [],
                                            children: [
                                                JSXExprContainer(
                                                    JSXExprContainer {
                                                        span: 11..16,
                                                        expr: Ident(
                                                            Ident {
                                                                span: 12..15,
                                                                name: "baz",
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                ),
            },
        ],
    },
)
