crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__jsx-6.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"<Foo bar={baz} />\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..17,
                expr: JSXElement(
                    JSXElement {
                        span: 0..17,
                        name: "Foo",
                        attrs: [
                            JSXAttr {
                                span: 5..14,
                                ident: Ident {
                                    span: 5..8,
                                    name: "bar",
                                },
                                value: JSXExprContainer(
                                    JSXExprContainer {
                                        span: 9..14,
                                        expr: Ident(
                                            Ident {
                                                span: 10..13,
                                                name: "baz",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ],
                        children: [],
                    },
                ),
            },
        ],
    },
)
