crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__jsx-8.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"<Foo><Bar>{baz}</Bar></Foo>\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..27,
                expr: JSXElement(
                    JSXElement {
                        span: 0..27,
                        name: "Foo",
                        attrs: [],
                        children: [
                            JSXElement(
                                JSXElement {
                                    span: 5..21,
                                    name: "Bar",
                                    attrs: [],
                                    children: [
                                        JSXExprContainer(
                                            JSXExprContainer {
                                                span: 10..15,
                                                expr: Ident(
                                                    Ident {
                                                        span: 11..14,
                                                        name: "baz",
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                    },
                ),
            },
        ],
    },
)
