crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__member_access-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"foo.bar()\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..9,
                expr: App(
                    App {
                        span: 0..9,
                        lam: Member(
                            Member {
                                span: 0..7,
                                obj: Ident(
                                    Ident {
                                        span: 0..3,
                                        name: "foo",
                                    },
                                ),
                                prop: Ident(
                                    Ident {
                                        span: 4..7,
                                        name: "bar",
                                    },
                                ),
                            },
                        ),
                        args: [],
                    },
                ),
            },
        ],
    },
)
